add untested predict_raw_text for lm controller

--- a/nbs/00_text_main_streaming.ipynb
+++ b/nbs/00_text_main_streaming.ipynb
@@ -527,7 +527,7 @@
     "    def prepare_test_dataset_from_raws(self,\n",
     "                                       content, # Either a single sentence, list of sentence or a dictionary with keys are metadata columns and values are list\n",
     "                                      ):\n",
-    "        if len(self.metadatas)!=0 and not isinstance(content,dict):\n",
+    "        if len(self.metadatas) and not isinstance(content,dict):\n",
     "            raise ValueError(f'There is/are metadatas in the preprocessing step. Please include a dictionary including these keys for metadatas: {self.metadatas}, and texture content: {self.main_text}')\n",
     "            \n",
     "        _dic = {self.main_text:[content]} if isinstance(content,str) else content\n",
