--- a/nbs/03_model_lm_gpt2_tutorial.ipynb
+++ b/nbs/03_model_lm_gpt2_tutorial.ipynb
@@ -1533,8 +1533,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='31' max='1132' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  31/1132 00:07 < 04:44, 3.87 it/s, Epoch 0.11/4]\n",
+       "      <progress value='1132' max='1132' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [1132/1132 06:18, Epoch 4/4]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1542,9 +1542,34 @@
        "      <th>Epoch</th>\n",
        "      <th>Training Loss</th>\n",
        "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>3.013410</td>\n",
+       "      <td>0.248560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3.194200</td>\n",
+       "      <td>2.878801</td>\n",
+       "      <td>0.259095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3.194200</td>\n",
+       "      <td>2.830053</td>\n",
+       "      <td>0.263616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2.764700</td>\n",
+       "      <td>2.824914</td>\n",
+       "      <td>0.264219</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
       ],
@@ -1554,6 +1579,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='142' max='142' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [142/142 00:07]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perplexity on validation set: 16.859\n"
+     ]
     }
    ],
    "source": [
@@ -1609,7 +1659,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xformers is not installed correctly. If you want to use memory_efficient_attention to accelerate training use the following command to install Xformers\n",
+      "pip install xformers.\n"
+     ]
+    }
+   ],
    "source": [
     "text_gen = pipeline(\"text-generation\",model='./sample_weights/lm_model', config = _config, tokenizer=_tokenizer)"
    ]
@@ -1618,7 +1677,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> major problem . this is by far one of the eryn regnier clothes i have purchased lately. very thin, loose knit and not flattering on an hourglass shape. if you are a 32 d, this is a very pretty top. however, there is no way to wear it with the\n",
+      ">>> major problem . this is by far one of the iphone's most comfortable pants i know. it was supposed to be a more straight fit, but i had a very hard time with the stretch. the fabric feels like it might be too long for an 8 th st, but the crotch was so\n",
+      ">>> major problem . this is by far one of the irls that i am buying these weeks, i normally buy one size up in maeve bottoms. when i boasts about having never had a \" problem \" with a large bust, i am being grossly misleading. i know this would \" make\n"
+     ]
+    }
+   ],
    "source": [
     "# reference: https://huggingface.co/docs/transformers/v4.33.2/en/main_classes/text_generation#transformers.GenerationMixin.generate\n",
     "preds = text_gen(sentence1, num_return_sequences=3,max_new_tokens=50,num_beams=1,do_sample=True)\n",
@@ -1630,7 +1706,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> flattering . this is by far one of the erynflovskas best pieces i have ever purchased! i bought it in both colors. the color is just beautiful. i got a size medium. the material is soft and comfortable. i really can't tell if there's \" shimmer or\n",
+      ">>> flattering . this is by far one of the irls with my best reviews as it's comfortable and flattering without the baggy poufy feel of what other reviewers rave about. it's flattering even if you have boobs. i'm 5'2 \", and it goes just below the hips\n",
+      ">>> flattering . this is by far one of the iphone 5 th dresses i have bought this season. it is great quality, i received many compliments, there's an elastic waist and the fabric is thick. this dress has great movement and is easy to dress up or down. i ordered the black\n"
+     ]
+    }
+   ],
    "source": [
     "preds = text_gen(sentence2, num_return_sequences=3,max_new_tokens=50,num_beams=1,do_sample=True)\n",
     "for pred in preds:\n",
