--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -56,7 +56,10 @@
     "from functools import partial\n",
     "import evaluate\n",
     "import numpy as np\n",
-    "from that_nlp_library.utils import *"
+    "from that_nlp_library.utils import *\n",
+    "from that_nlp_library.text_main_lm import TextDataLMController\n",
+    "from that_nlp_library.text_main_lm_streaming import TextDataLMControllerStreaming\n",
+    "from transformers import pipeline"
    ]
   },
   {
@@ -658,7 +661,40 @@
     "            eval_results['perplexity'] = perplexity\n",
     "        \n",
     "        self.trainer = trainer\n",
-    "        "
+    "        \n",
+    "    def predict_raw_text(self,\n",
+    "                         content:dict|list|str, # Either a single sentence, list of sentence or a dictionary where keys are metadata, values are list\n",
+    "                         print_result=True, # To whether print the result in readable format, or get the result returned\n",
+    "                         **kwargs, # keyword arguments for HuggingFace's text-generation (for clm) or fill-mask (for mlm)\n",
+    "                        ):\n",
+    "        # Example of kwargs for text-generation:\n",
+    "        # https://huggingface.co/docs/transformers/v4.33.2/en/main_classes/text_generation#transformers.GenerationMixin.generate\n",
+    "        \n",
+    "        if not isinstance(self.data_store,(TextDataLMController,TextDataLMControllerStreaming)) or not self.data_store._processed_call:\n",
+    "            raise ValueError('This functionality needs a TextDataController object which has processed some training data')\n",
+    "        test_dset = self.data_store.prepare_test_dataset_from_raws(content)\n",
+    "        result = self.predict_ddict(test_dset,**kwargs)\n",
+    "        if print_result:\n",
+    "            is_mlm = check_and_get_attribute(self.data_store,'is_mlm')\n",
+    "            if is_mlm:\n",
+    "                for pred in result:\n",
+    "                    print(f\"Score: {pred['score']:.3f} >>> {pred['sequence']}\")\n",
+    "            else:\n",
+    "                for pred in result:\n",
+    "                    print(f\">>> {pred['generated_text']}\")\n",
+    "        else:\n",
+    "            return result\n",
+    "    \n",
+    "    def predict_ddict(self,\n",
+    "                      dset:Dataset, # A processed and tokenized Dataset\n",
+    "                      **kwargs, # keyword arguments for HuggingFace's text-generation (for clm) or fill-mask (for mlm)\n",
+    "                     ):\n",
+    "        is_mlm = check_and_get_attribute(self.data_store,'is_mlm')\n",
+    "        tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
+    "        main_text=check_and_get_attribute(self.data_store,'main_text')\n",
+    "        _task = 'fill-mask' if is_mlm else 'text-generation'\n",
+    "        pipeline_obj = pipeline(_task,model=self.model,tokenizer = tokenizer)\n",
+    "        return [pipeline_obj(s,**kwargs) for s in dset[main_text]]"
    ]
   },
   {
@@ -797,6 +833,51 @@
    ],
    "source": [
     "show_doc(ModelLMController.fit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "---\n",
+       "\n",
+       "### ModelLMController.predict_raw_text\n",
+       "\n",
+       ">      ModelLMController.predict_raw_text (content:dict|list|str,\n",
+       ">                                          print_result=True, **kwargs)\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| content | dict \\| list \\| str |  | Either a single sentence, list of sentence or a dictionary where keys are metadata, values are list |\n",
+       "| print_result | bool | True | To whether print the result in readable format, or get the result returned |\n",
+       "| kwargs |  |  |  |"
+      ],
+      "text/plain": [
+       "---\n",
+       "\n",
+       "### ModelLMController.predict_raw_text\n",
+       "\n",
+       ">      ModelLMController.predict_raw_text (content:dict|list|str,\n",
+       ">                                          print_result=True, **kwargs)\n",
+       "\n",
+       "|    | **Type** | **Default** | **Details** |\n",
+       "| -- | -------- | ----------- | ----------- |\n",
+       "| content | dict \\| list \\| str |  | Either a single sentence, list of sentence or a dictionary where keys are metadata, values are list |\n",
+       "| print_result | bool | True | To whether print the result in readable format, or get the result returned |\n",
+       "| kwargs |  |  |  |"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "show_doc(ModelLMController.predict_raw_text)"
    ]
   },
   {
