--- a/nbs/00_text_main_lm_streaming.ipynb
+++ b/nbs/00_text_main_lm_streaming.ipynb
@@ -283,11 +283,50 @@
     "                                                             pad_to_multiple_of=8 if pad_to_multiple_of_8 else None\n",
     "                                                            )\n",
     "                                               \n",
+    "    def prepare_test_dataset_from_raws(self,\n",
+    "                                       content, # Either a single sentence, list of sentence or a dictionary with keys are metadata columns and values are list\n",
+    "                                      ):\n",
+    "        if len(self.metadatas) and not isinstance(content,dict):\n",
+    "            raise ValueError(f'There is/are metadatas in the preprocessing step. Please include a dictionary including these keys for metadatas: {self.metadatas}, and texture content: {self.main_text}')\n",
+    "            \n",
+    "        _dic = {self.main_text:[content]} if isinstance(content,str) else content\n",
+    "        for k in _dic.keys():\n",
+    "            _dic[k] = val2iterable(_dic[k])\n",
+    "        \n",
+    "        test_dict = Dataset.from_dict(_dic)\n",
+    "        \n",
+    "        # set num_proc to 1 for small data processing\n",
+    "        _tmp1 = self.num_proc\n",
+    "        _tmp2 = self.tok_num_proc\n",
+    "        self.num_proc=1\n",
+    "        self.tok_num_proc=1\n",
+    "        results = self.prepare_test_dataset(test_dict)\n",
+    "        self.num_proc = _tmp1\n",
+    "        self.tok_num_proc=_tmp2\n",
+    "        return results\n",
+    "        \n",
     "    def prepare_test_dataset(self,\n",
     "                             test_dset, # The HuggingFace Dataset as Test set\n",
-    "                             do_filtering=False, # whether to perform data filtering on this test set\n",
     "                            ):\n",
-    "        raise NotImplementedError(\"There's no test set preparation for Language Model\")"
+    "        test_cols = set(get_dset_col_names(test_dset))\n",
+    "        missing_cols = set(self.cols_to_keep) - test_cols\n",
+    "        if len(missing_cols):\n",
+    "            raise ValueError(f'Test set does not have these columns required for preprocessings: {missing_cols}')\n",
+    "            \n",
+    "        print_msg('Start Test Set Transformation',20,verbose=self.verbose)\n",
+    "        \n",
+    "        # Process metadatas\n",
+    "        test_dset = self._process_metadatas(test_dset)\n",
+    "        \n",
+    "        # Content transformation\n",
+    "        test_dset = self._do_transformation(test_dset)\n",
+    "        \n",
+    "        # Drop every columns except for main_text\n",
+    "        cols_to_remove = {c for c in test_cols if c!=self.main_text}\n",
+    "        test_dset=test_dset.remove_columns(list(cols_to_remove))\n",
+    "        \n",
+    "        self.verboseprint('Done')\n",
+    "        return test_dset"
    ]
   },
   {
