draft of hidden state extraction, unfinished

--- a/nbs/03_model_lm_main.ipynb
+++ b/nbs/03_model_lm_main.ipynb
@@ -589,6 +589,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
+    "#| export\n",
+    "def extract_hidden_states(batch,\n",
+    "                          model=None, # NLP model\n",
+    "                          model_input_names=['input_ids', 'token_type_ids', 'attention_mask'], # Model required inputs, from tokenizer.model_input_names\n",
+    "                          data_collator=None, # HuggingFace data collator\n",
+    "                          state_name='last_hidden_state', # Name of the state to extract\n",
+    "                          state_idx=0, # The index (or indices) of the state to extract\n",
+    "                          device = None, # device that the model is trained on\n",
+    "                          ):\n",
+    "    state_idx = val2iterable(state_idx)\n",
+    "    \n",
+    "    if data_collator is not None:    \n",
+    "# --- Convert from  \n",
+    "# {'input_ids': [tensor([    0, 10444,   244, 14585,   125,  2948,  5925,   368,     2]), \n",
+    "#                tensor([    0, 16098,  2913,   244,   135,   198, 34629,  6356,     2])]\n",
+    "# 'attention_mask': [tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]), \n",
+    "#                    tensor([1, 1, 1, 1, 1, 1, 1, 1, 1])]\n",
+    "#                    }\n",
+    "# --- to\n",
+    "# [{'input_ids': tensor([    0, 10444,   244, 14585,   125,  2948,  5925,   368,     2]),\n",
+    "#   'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1])},\n",
+    "#  {'input_ids': tensor([    0, 16098,  2913,   244,   135,   198, 34629,  6356,     2]),\n",
+    "#   'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1])}]\n",
+    "\n",
+    "        # remove string text, due to transformer new version       \n",
+    "        collator_inp = []\n",
+    "        ks = [k for k in batch.keys() if k in model_input_names]\n",
+    "        vs = [batch[k] for k in ks]\n",
+    "        for pair in zip(*vs):\n",
+    "            collator_inp.append({k:v for k,v in zip(ks,pair)})\n",
+    "        \n",
+    "        batch = data_collator(collator_inp)\n",
+    "    \n",
+    "    inputs = {k:v.to(device) for k,v in batch.items()\n",
+    "              if k in model_input_names}\n",
+    "            \n",
+    "    # switch to eval mode for evaluation\n",
+    "    if model.training:\n",
+    "        model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "        states = outputs[state_name]\n",
+    "        for i in state_idx:\n",
+    "            if isinstance(states,tuple):\n",
+    "                states = states[i]\n",
+    "            else:\n",
+    "                states = states[:,i]\n",
+    "    # Switch back to train mode\n",
+    "    if not model.training:\n",
+    "        model.train()\n",
+    "\n",
+    "    return {state_name:states.cpu().numpy()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| export\n",
     "class ModelLMController():\n",
     "    def __init__(self,\n",
@@ -676,12 +737,13 @@
     "        result = self.predict_ddict(test_dset,**kwargs)\n",
     "        if print_result:\n",
     "            is_mlm = check_and_get_attribute(self.data_store,'is_mlm')\n",
-    "            if is_mlm:\n",
-    "                for pred in result:\n",
-    "                    print(f\"Score: {pred['score']:.3f} >>> {pred['sequence']}\")\n",
-    "            else:\n",
-    "                for pred in result:\n",
-    "                    print(f\">>> {pred['generated_text']}\")\n",
+    "            for preds in result:\n",
+    "                for pred in preds:\n",
+    "                    if is_mlm:\n",
+    "                        print(f\"Score: {pred['score']:.3f} >>> {pred['sequence']}\")\n",
+    "                    else:\n",
+    "                        print(f\">>> {pred['generated_text']}\")\n",
+    "                print('-'*20)\n",
     "        else:\n",
     "            return result\n",
     "    \n",
@@ -693,8 +755,32 @@
     "        tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
     "        main_text=check_and_get_attribute(self.data_store,'main_text')\n",
     "        _task = 'fill-mask' if is_mlm else 'text-generation'\n",
-    "        pipeline_obj = pipeline(_task,model=self.model,tokenizer = tokenizer)\n",
-    "        return [pipeline_obj(s,**kwargs) for s in dset[main_text]]"
+    "        pipeline_obj = pipeline(_task,model=self.model,tokenizer=tokenizer,device=self.model.device)\n",
+    "        str_list = dset[main_text]\n",
+    "        if _task=='fill-mask':\n",
+    "            all_tfms = self.data_store.content_tfms \n",
+    "            all_tfms = partial(func_all,functions=all_tfms) if len(all_tfms) else lambda x: x\n",
+    "            mask_str = all_tfms(tokenizer.mask_token)\n",
+    "            str_list = [str(s).replace(mask_str,tokenizer.mask_token) for s in str_list]\n",
+    "        return [pipeline_obj(s,**kwargs) for s in str_list]\n",
+    "    \n",
+    "    def get_hidden_states_from_raw_dset(self,\n",
+    "                                        dset: Dataset, # A raw HuggingFace dataset\n",
+    "                                        state_name, # Name of the (hidden) state to extract\n",
+    "                                        state_idx=0, # The index (or indices) of the state to extract. For `hidden_states`, accept multiple values\n",
+    "                                       ):\n",
+    "        if not isinstance(self.data_store,(TextDataLMController,TextDataLMControllerStreaming)) or not self.data_store._processed_call:\n",
+    "            raise ValueError('This functionality needs a TextDataController object which has processed some training data')\n",
+    "        dset = self.data_store.prepare_test_dataset(dset,do_tokenize=True)\n",
+    "        return self.get_hidden_states(dset,state_name,state_idx)\n",
+    "        \n",
+    "        \n",
+    "    def get_hidden_states(self,\n",
+    "                          dset: Dataset,# A processed and tokenized DatasetDict/Dataset\n",
+    "                          \n",
+    "                         ):\n",
+    "        tokenizer=check_and_get_attribute(self.data_store,'tokenizer')\n",
+    "        dset.set_format(\"torch\",columns=tokenizer.model_input_names)                   "
    ]
   },
   {
