--- a/nbs/03_model_lm_roberta_tutorial.ipynb
+++ b/nbs/03_model_lm_roberta_tutorial.ipynb
@@ -760,7 +760,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='1132' max='1132' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [1132/1132 04:43, Epoch 4/4]\n",
+       "      [1132/1132 04:42, Epoch 4/4]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -813,7 +813,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='142' max='142' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [142/142 00:06]\n",
+       "      [142/142 00:05]\n",
        "    </div>\n",
        "    "
       ],
@@ -873,10 +873,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "If you want to use `RobertaLMHeadModel` as a standalone, add `is_decoder=True.`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total parameters: 124697433\n",
+      "Total trainable parameters: 124697433\n"
+     ]
+    }
+   ],
    "source": [
-    "# sentence1 = 'major problem . this is by far one of the '\n",
-    "# sentence2 = 'flattering . this is by far one of the '"
+    "trained_model = language_model_init(AutoModelForCausalLM,\n",
+    "                                    cpoint_path='./sample_weights/lm_model',\n",
+    "                                   )"
    ]
   },
   {
@@ -885,7 +902,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline"
+    "controller2 = ModelLMController(trained_model,data_store=tdc,seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<mask>'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "controller2.data_store.tokenizer.mask_token"
    ]
   },
   {
@@ -894,7 +931,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_filler = pipeline('fill-mask',model='./sample_weights/lm_model', config = _config, tokenizer=_tokenizer)"
+    "inp1 = {'Title':'Flattering',\n",
+    "        'Review Text': \"Love this <mask>. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\"\n",
+    "       }"
    ]
   },
   {
@@ -906,20 +945,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.366 >>> flattering. love this dress. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.275 >>> flattering. love this top. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.105 >>> flattering. love this shirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.075 >>> flattering. love this sweater. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.064 >>> flattering. love this skirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n"
+      "Score: 0.371 >>> flattering. love this dress. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.266 >>> flattering. love this top. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.109 >>> flattering. love this shirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.077 >>> flattering. love this sweater. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.064 >>> flattering. love this skirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "--------------------\n"
      ]
     }
    ],
    "source": [
-    "# \"Love this skirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug.\"\n",
-    "sentence1 = \"flattering . love this <mask> . the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\"\n",
-    "preds = mask_filler(sentence1)\n",
-    "for pred in preds:\n",
-    "    print(f\"Score: {pred['score']:.3f} >>> {pred['sequence']}\")"
+    "controller2.predict_raw_text(inp1,print_result=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can input several raw texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp2 = {'Title':['Flattering','Lovely, but small'],\n",
+    "        'Review Text': [\"Love this <mask>. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\",\n",
+    "                        \"Love this skirt. The detail is amazing. Runs <mask>, I ordered a 12 I'm usually a 10, but still a little snug\"]\n",
+    "       }"
    ]
   },
   {
@@ -931,20 +986,392 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 0.433 >>> flattering. love this skirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.299 >>> flattering. love this skirt. the detail is amazing. runs large i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.205 >>> flattering. love this skirt. the detail is amazing. runs big i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.023 >>> flattering. love this skirt. the detail is amazing. runs tight i ordered a 12 i'm usually a 10, but still a little snug\n",
-      "Score: 0.010 >>> flattering. love this skirt. the detail is amazing. runs snug i ordered a 12 i'm usually a 10, but still a little snug\n"
+      "Score: 0.371 >>> flattering. love this dress. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.266 >>> flattering. love this top. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.109 >>> flattering. love this shirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.077 >>> flattering. love this sweater. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.064 >>> flattering. love this skirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "--------------------\n",
+      "Score: 0.886 >>> lovely, but small. love this skirt. the detail is amazing. runs small, i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.070 >>> lovely, but small. love this skirt. the detail is amazing. runs large, i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.029 >>> lovely, but small. love this skirt. the detail is amazing. runs big, i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.003 >>> lovely, but small. love this skirt. the detail is amazing. runs smaller, i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "Score: 0.003 >>> lovely, but small. love this skirt. the detail is amazing. runs tiny, i ordered a 12 i'm usually a 10, but still a little snug\n",
+      "--------------------\n"
      ]
     }
    ],
    "source": [
-    "sentence1 = \"flattering . love this skirt . the detail is amazing. runs <mask> i ordered a 12 i'm usually a 10, but still a little snug\"\n",
-    "preds = mask_filler(sentence1)\n",
-    "for pred in preds:\n",
-    "    print(f\"Score: {pred['score']:.3f} >>> {pred['sequence']}\")"
+    "controller2.predict_raw_text(inp2,print_result=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'score': 0.3707156479358673,\n",
+       "   'token': 3588,\n",
+       "   'token_str': ' dress',\n",
+       "   'sequence': \"flattering. love this dress. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.2660662829875946,\n",
+       "   'token': 299,\n",
+       "   'token_str': ' top',\n",
+       "   'sequence': \"flattering. love this top. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.10872329026460648,\n",
+       "   'token': 6399,\n",
+       "   'token_str': ' shirt',\n",
+       "   'sequence': \"flattering. love this shirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.07715490460395813,\n",
+       "   'token': 23204,\n",
+       "   'token_str': ' sweater',\n",
+       "   'sequence': \"flattering. love this sweater. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.06448931992053986,\n",
+       "   'token': 16576,\n",
+       "   'token_str': ' skirt',\n",
+       "   'sequence': \"flattering. love this skirt. the detail is amazing. runs small i ordered a 12 i'm usually a 10, but still a little snug\"}],\n",
+       " [{'score': 0.8857035636901855,\n",
+       "   'token': 650,\n",
+       "   'token_str': ' small',\n",
+       "   'sequence': \"lovely, but small. love this skirt. the detail is amazing. runs small, i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.07002106308937073,\n",
+       "   'token': 739,\n",
+       "   'token_str': ' large',\n",
+       "   'sequence': \"lovely, but small. love this skirt. the detail is amazing. runs large, i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.028712205588817596,\n",
+       "   'token': 380,\n",
+       "   'token_str': ' big',\n",
+       "   'sequence': \"lovely, but small. love this skirt. the detail is amazing. runs big, i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.0031989458948373795,\n",
+       "   'token': 2735,\n",
+       "   'token_str': ' smaller',\n",
+       "   'sequence': \"lovely, but small. love this skirt. the detail is amazing. runs smaller, i ordered a 12 i'm usually a 10, but still a little snug\"},\n",
+       "  {'score': 0.002547371434047818,\n",
+       "   'token': 5262,\n",
+       "   'token_str': ' tiny',\n",
+       "   'sequence': \"lovely, but small. love this skirt. the detail is amazing. runs tiny, i ordered a 12 i'm usually a 10, but still a little snug\"}]]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "controller2.predict_raw_text(inp2,print_result=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract hidden states from model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp1 = {'Title':'Flattering',\n",
+    "        'Review Text': \"Love this skirt. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\"\n",
+    "       }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_config = AutoConfig.from_pretrained('./sample_weights/lm_model',output_hidden_states=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RobertaConfig {\n",
+       "  \"_name_or_path\": \"./sample_weights/lm_model\",\n",
+       "  \"architectures\": [\n",
+       "    \"RobertaForMaskedLM\"\n",
+       "  ],\n",
+       "  \"attention_probs_dropout_prob\": 0.1,\n",
+       "  \"bos_token_id\": 0,\n",
+       "  \"classifier_dropout\": null,\n",
+       "  \"eos_token_id\": 2,\n",
+       "  \"hidden_act\": \"gelu\",\n",
+       "  \"hidden_dropout_prob\": 0.1,\n",
+       "  \"hidden_size\": 768,\n",
+       "  \"initializer_range\": 0.02,\n",
+       "  \"intermediate_size\": 3072,\n",
+       "  \"layer_norm_eps\": 1e-05,\n",
+       "  \"max_position_embeddings\": 514,\n",
+       "  \"model_type\": \"roberta\",\n",
+       "  \"num_attention_heads\": 12,\n",
+       "  \"num_hidden_layers\": 12,\n",
+       "  \"output_hidden_states\": true,\n",
+       "  \"pad_token_id\": 1,\n",
+       "  \"position_embedding_type\": \"absolute\",\n",
+       "  \"torch_dtype\": \"float32\",\n",
+       "  \"transformers_version\": \"4.31.0\",\n",
+       "  \"type_vocab_size\": 1,\n",
+       "  \"use_cache\": true,\n",
+       "  \"vocab_size\": 50265\n",
+       "}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "If you want to use `RobertaLMHeadModel` as a standalone, add `is_decoder=True.`\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total parameters: 124697433\n",
+      "Total trainable parameters: 124697433\n"
+     ]
+    }
+   ],
+   "source": [
+    "trained_model = language_model_init(AutoModelForCausalLM,\n",
+    "                                    cpoint_path='./sample_weights/lm_model',\n",
+    "                                    config=_config\n",
+    "                                   )\n",
+    "\n",
+    "controller2 = ModelLMController(trained_model,data_store=tdc,seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp = controller2.data_store.prepare_test_dataset_from_raws(inp1,do_tokenize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['Title', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask'],\n",
+       "    num_rows: 1\n",
+       "})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp.set_format(\"torch\",columns=controller2.data_store.tokenizer.model_input_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from that_nlp_library.model_lm_main import _extract_hidden_states"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp = _tmp.map(partial(_extract_hidden_states,\n",
+    "                 model=controller2.model,\n",
+    "                 model_input_names = controller2.data_store.tokenizer.model_input_names,\n",
+    "                 state_name='hidden_states',\n",
+    "                 state_idx=[-1,0],\n",
+    "                 device = controller2.model.device),\n",
+    "         batched=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp.set_format('numpy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 768)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_tmp['hidden_states'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp2 = {'Title':['Flattering','Lovely, but small'],\n",
+    "        'Review Text': [\"Love this <mask>. The detail is amazing. Runs small I ordered a 12 I'm usually a 10, but still a little snug\",\n",
+    "                        \"Love this skirt. The detail is amazing. Runs <mask>, I ordered a 12 I'm usually a 10, but still a little snug\"]\n",
+    "       }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp = controller2.data_store.prepare_test_dataset_from_raws(inp2,do_tokenize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['Title', 'Review Text', 'input_ids', 'attention_mask', 'special_tokens_mask'],\n",
+       "    num_rows: 2\n",
+       "})"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp.set_format(\"torch\",columns=controller2.data_store.tokenizer.model_input_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp = _tmp.map(partial(_extract_hidden_states,\n",
+    "                 model=controller2.model,\n",
+    "                 model_input_names = controller2.data_store.tokenizer.model_input_names,\n",
+    "                 state_name='hidden_states',\n",
+    "                 state_idx=[-1,0],\n",
+    "                 device = controller2.model.device),\n",
+    "         batched=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_tmp.set_format('numpy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 768)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_tmp['hidden_states'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
